--- a/New Dental/index.html
+++ b/New Dental/index.html
@@ -6,7 +6,23 @@
   <title>Dental studio Hristovi</title>
   <meta name="description" content="Test description"/>
   <meta name="keywords"  content="web,programming"/>  
-  <link rel="shortcut icon" type="image/ico" href="favicon.ico"> 
+  <link rel="apple-touch-icon" sizes="57x57" href="/apple-icon-57x57.png">
+  <link rel="apple-touch-icon" sizes="60x60" href="/apple-icon-60x60.png">
+  <link rel="apple-touch-icon" sizes="72x72" href="/apple-icon-72x72.png">
+  <link rel="apple-touch-icon" sizes="76x76" href="/apple-icon-76x76.png">
+  <link rel="apple-touch-icon" sizes="114x114" href="/apple-icon-114x114.png">
+  <link rel="apple-touch-icon" sizes="120x120" href="/apple-icon-120x120.png">
+  <link rel="apple-touch-icon" sizes="144x144" href="/apple-icon-144x144.png">
+  <link rel="apple-touch-icon" sizes="152x152" href="/apple-icon-152x152.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-icon-180x180.png">
+  <link rel="icon" type="image/png" sizes="192x192"  href="/android-icon-192x192.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet" type="text/css" href="css/bootstrap.css
 ">
@@ -134,9 +150,11 @@
         s = checkTime(x.getSeconds());
         // Get the weekday as a number (0-6)
         const days = ["Неделя","Понеделник","Вторник","Сряда","Четвъртък","Петък","Неделя"];        
-        let day = days[x.getDay()]; 
+        let day = days[x.getDay()];
+        const month = ["Януари","Февруари","Март","Април","Май","Юни","Юли","Август","Септември","Октомври","Ноември","Декември"];
+        let monthWord = month[x.getMonth()];  
 
-        var x1=x.getDate() + "." + x.getMonth()+1 + "." + x.getFullYear()+" "+day; 
+        var x1=x.getDate() + "." +monthWord + "." + x.getFullYear()+" "+day; 
         x1 = x1 + " - " +  x.getHours( )+ ":" +  m + ":" +  s + "-" + open;
 
         function checkTime(i) {
